feat: refactor global exception handler to polymorphic enum framework (#30)
* feat(exception-handling): implemented multiple BAD Request cases not handled by the GloablExceptionHandler.

* feat(exception-handling): implement global exception handling framework with custom error codes

* feat(exception-handling): add custom exceptions for forklift domain and update error handling

* feat(exception-handling): add LoadUnit domain exceptions and integrate with existing error handling

* feat(exception-handling): replace ResourceNotFoundException with LoadUnitNotFoundException and update related tests

* feat(exception-handling): add LoadUnitExceptionHandler for handling LoadUnitDomainException

* feat(exception-handling): add StorageBin domain exceptions and integrate with error handling

* feat(exception-handling): implement TransportOrder domain exceptions and update error handling

* feat(exception-handling): add DispatchJob domain exceptions and integrate with error handling

* feat(exception-handling): refine exception handling and improve code formatting

* feat(exception-handling): refine exception handling and improve code formatting

* feat(exception-handling): fixed some errors related to exception handling.

closes #68